feat: implement order tracking with status timeline (Placed → Packed → Shipped → Delivered)